maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:26: error: not found: value aMurSud
        }else if(aMurSud(i,j)){
                 ^ShortestPathMaze:28: error: not found: value aMurEst
        }else if(aMurEst(i,j)){
                 ^